# Warping_voxel_grids_119

./: .gitignore  README.md
data/O3D_GT/: mesh_post_pointcloud.ply  mesh_pre_pointcloud.ply
data/Output/: optimization_data.txt  optimized_points_final.txt
data/Output/Warped_Results/: warped_tsdf_mesh.ply
data/loop_1/post/: build_time_log.txt  standard_trajectory_with_loop.txt
data/loop_1/pre/: build_time_log.txt  standard_trajectory_no_loop.txt
scripts/: Block_pb2.py  Layer_pb2.py  eval_fscore.py  mesh_to_TSDF.py  mesh_warping.py  o3d_tsdf_fusion.py
src/ray_caster/: CMakeLists.txt  main.cpp
src/triangulator/: CMakeLists.txt  main.cpp
